something has been changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,18 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 #flyway
-#spring.flyway.url=jdbc:postgresql://localhost:5432/urlTelegram
-#spring.flyway.user=postgres
-#spring.flyway.password=postgres
-#spring.flyway.locations=classpath:db/migration
+spring.flyway.url=jdbc:postgresql://localhost:5432/ThumbnailTester
+spring.flyway.user=postgres
+spring.flyway.password=postgres
+spring.flyway.locations=classpath:db/migration
 
 
 # ????????? JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+#values
+youtube.access.token=YOUR_ACCESS_TOKEN
+application.name=YourApplicationName
+youtube.client.id=YOUR_CLIENT_ID
+youtube.client.secret=YOUR_CLIENT_SECRET
