--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,27 @@
+# ???????? ??????????
 spring.application.name=ThumbnailTester
 
-#PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/ThumbnailTester
+# PostgreSQL (??????????? ? ??????????, ? ?? localhost!)
+spring.datasource.url=jdbc:postgresql://thumbnail-test-db:5432/thumbnailTester
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-
-#flyway
-spring.flyway.url=jdbc:postgresql://localhost:5432/ThumbnailTester
+# Flyway
+spring.flyway.url=jdbc:postgresql://thumbnail-test-db:5432/thumbnailTester
 spring.flyway.user=postgres
 spring.flyway.password=postgres
 spring.flyway.locations=classpath:db/migration
 
-
-# ????????? JPA
+# Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-#values
+# OAuth2 / YouTube API
 youtube.access.token=YOUR_ACCESS_TOKEN
 application.name=YourApplicationName
 youtube.client.id=YOUR_CLIENT_ID
 youtube.client.secret=YOUR_CLIENT_SECRET
+
+server.port=9990
