Finish code without extension

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,17 @@ services:
     depends_on:
       thumbnail-test-db:
         condition: service_healthy
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://thumbnail-test-db:5432/thumbnailTester
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=postgres
+    env_file:
+      - .env
     restart: always
 
   thumbnail-test-db:
     image: postgres
     container_name: thumbnail-test-db
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=thumbnailTester
+      POSTGRES_USER: ${SPRING_DATASOURCE_USERNAME}
+      POSTGRES_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      POSTGRES_DB: thumbnailTester
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
