--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
-# ???????? ??????????
 spring.application.name=ThumbnailTester
 
-# PostgreSQL (??????????? ? ??????????, ? ?? localhost!)
-spring.datasource.url=jdbc:postgresql://thumbnail-test-db:5432/thumbnailTester
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# PostgreSQL
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Flyway
-spring.flyway.url=jdbc:postgresql://thumbnail-test-db:5432/thumbnailTester
-spring.flyway.user=postgres
-spring.flyway.password=postgres
+spring.flyway.url=${SPRING_FLYWAY_URL:${SPRING_DATASOURCE_URL}}
+spring.flyway.user=${SPRING_FLYWAY_USER:${SPRING_DATASOURCE_USERNAME}}
+spring.flyway.password=${SPRING_FLYWAY_PASSWORD:${SPRING_DATASOURCE_PASSWORD}}
 spring.flyway.locations=classpath:db/migration
 
 # Hibernate
@@ -19,9 +18,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 # OAuth2 / YouTube API
-youtube.access.token=YOUR_ACCESS_TOKEN
-application.name=YourApplicationName
-youtube.client.id=YOUR_CLIENT_ID
-youtube.client.secret=YOUR_CLIENT_SECRET
+application.name=${application.name}
+youtube.client.id=${YOUTUBE_CLIENT_ID}
+youtube.client.secret=${YOUTUBE_CLIENT_SECRET}
 
 server.port=9990
