--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,25 @@
-spring.application.name=ThumbnailTester
+# Spring Application name
+spring.application.name=${SPRING_APPLICATION_NAME}
 
-# PostgreSQL
+# PostgreSQL settings
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Flyway
-spring.flyway.url=${SPRING_FLYWAY_URL:${SPRING_DATASOURCE_URL}}
-spring.flyway.user=${SPRING_FLYWAY_USER:${SPRING_DATASOURCE_USERNAME}}
-spring.flyway.password=${SPRING_FLYWAY_PASSWORD:${SPRING_DATASOURCE_PASSWORD}}
+# Flyway settings
+spring.flyway.url=${SPRING_FLYWAY_URL}
+spring.flyway.user=${SPRING_FLYWAY_USER}
+spring.flyway.password=${SPRING_FLYWAY_PASSWORD}
 spring.flyway.locations=classpath:db/migration
 
-# Hibernate
+# Hibernate settings
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-# OAuth2 / YouTube API
-application.name=${application.name}
+# OAuth2 / YouTube API settings
+application.name=${APPLICATION_NAME}
 youtube.client.id=${YOUTUBE_CLIENT_ID}
 youtube.client.secret=${YOUTUBE_CLIENT_SECRET}
 
