--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
 			<artifactId>google-oauth-client</artifactId>
 			<version>1.34.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>9.4.0</version>
+		</dependency>
 
 		<!-- Google HTTP Client Library for making HTTP requests -->
 		<dependency>
