--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - .env
     restart: always
     volumes:
-      - ./src/main/resources:/app/resources
+      - thumbnail_thumbnails:/app/thumbnails
 
   thumbnail-test-db:
     image: postgres:16
@@ -27,3 +27,5 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+volumes:
+  thumbnail_thumbnails:
