--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,13 @@
             <artifactId>google-collections</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>9.22.1</version>
+        </dependency>
+
+
 
     </dependencies>
 
