--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,7 @@ application.name=${APPLICATION_NAME}
 youtube.client.id=${YOUTUBE_CLIENT_ID}
 youtube.client.secret=${YOUTUBE_CLIENT_SECRET}
 
+#Key for encrypt and decrypt
+key.aes=${KEY_AES}
+
 server.port=9990
