Edited readme.md and .env

--- a/.env
+++ b/.env
@@ -16,5 +16,7 @@ SPRING_FLYWAY_PASSWORD=DATABASE_PASSWORD
 YOUTUBE_CLIENT_ID=YOUR_CLIENT_ID
 YOUTUBE_CLIENT_SECRET=YOUR_YOUTUBE_CLIENT_SECRET
 
-#Key AES
-KEY_AES=keyAes
+# AES Encryption Key
+# The application expects Google ID and refresh token to be AES-decrypted.
+# Provide the AES key here (must match the key used by the client for encryption).
+KEY_AES=your-32-byte-aes-key-here
