--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,25 @@
 spring.application.name=${SPRING_APPLICATION_NAME}
 
 # PostgreSQL settings
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialectspring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/thumbnailTester
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Flyway settings
-spring.flyway.url=${SPRING_FLYWAY_URL}
-spring.flyway.user=${SPRING_FLYWAY_USER}
-spring.flyway.password=${SPRING_FLYWAY_PASSWORD}
+#spring.flyway.url=${SPRING_FLYWAY_URL}
+#spring.flyway.user=${SPRING_FLYWAY_USER}
+#spring.flyway.password=${SPRING_FLYWAY_PASSWORD}
+#spring.flyway.locations=classpath:db/migration
+spring.flyway.url=jdbc:postgresql://localhost:5432/thumbnailTester
+spring.flyway.user=postgres
+spring.flyway.password=postgres
 spring.flyway.locations=classpath:db/migration
 
 # Hibernate settings
